# django-auth-ldap

./: .coveragerc  .editorconfig  .gitignore  .hgignore  .readthedocs.yml  .travis.yml  CHANGES  Dockerfile  MANIFEST  MANIFEST.in  Makefile  README  README.md  README.rst  dev-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  check.yml  docs.yml  packaging.yml  release.yml  test.yml
django_auth_ldap/: __init__.py  backend.py  config.py  models.py  tests.py
docs/: Makefile  authentication.rst  changes.rst  conf.py  contributing.rst  custombehavior.rst  example.rst  groups.rst  index.rst  install.rst  logging.rst  multiconfig.rst  performance.rst  permissions.rst  reference.rst  requirements.txt  users.rst
docs/ext/: daldocs.py
docs/source/: authentication.rst  conf.py  contributing.rst  groups.rst  index.rst  install.rst  multiconfig.rst  performance.rst  reference.rst  users.rst
test/: .coveragerc  django_auth_ldap  manage.py  settings.py  testin.sh  tox.ini  urls.py
test/test/: settings.py  wsgi.py
tests/: import_test_without_django.py  models.py  parameters_data.py  runtests.py  settings.py  slapd.conf  test_server_entries.json  test_server_info.json  test_server_schema.json  tests.ldif  tests.py
