[metadata]
license_file = LICENSE

[flake8]
# E501: line too long
# W503: line break before binary operator
ignore =
    E501
    W503

[isort]
combine_as_imports = True
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = django_auth_ldap
line_length = 88
multi_line_output = 3
