[metadata]
name = django-auth-ldap
version = attr: django_auth_ldap.__version__
description = Django LDAP authentication backend.
long_description = file: README.rst
author = Peter Sagerson
author_email = psagers@ignorare.net
url = https://github.com/django-auth-ldap/django-auth-ldap
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP
project_urls =
    Documentation = https://django-auth-ldap.readthedocs.io/
    Source = https://github.com/django-auth-ldap/django-auth-ldap
    Tracker = https://github.com/django-auth-ldap/django-auth-ldap/issues

[options]
python_requires = >=3.5
packages = django_auth_ldap
install_requires =
    Django>=1.11
    python-ldap>=3.1

[flake8]
# E501: line too long
# W503: line break before binary operator
ignore =
    E501
    W503

[isort]
combine_as_imports = True
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = django_auth_ldap
line_length = 88
multi_line_output = 3
