[metadata]
name = django-auth-ldap
description = Django LDAP authentication backend.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Peter Sagerson
author_email = psagers@ignorare.net
url = https://github.com/django-auth-ldap/django-auth-ldap
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP
project_urls =
    Documentation = https://django-auth-ldap.readthedocs.io/
    Source = https://github.com/django-auth-ldap/django-auth-ldap
    Tracker = https://github.com/django-auth-ldap/django-auth-ldap/issues

[options]
python_requires = >=3.6
packages = django_auth_ldap
install_requires =
    Django>=2.2
    python-ldap>=3.1

[flake8]
max-line-length = 88

[isort]
profile = black
